[package]
name = "nuki-sys"
version = "4.3.3"
authors = [
    "Serhii Plyhun <snuk188@gmail.com>",
    "Varphone Wong <varphone@qq.com>"
]
description = "Raw bindings to Nuklear 2D GUI library"
repository = "https://github.com/varphone/nukir-sys.git"
homepage = "https://github.com/varphone/nuki-sys"
license = "MIT OR Apache-2.0"
build = "build.rs"
links = "nuklear"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
